# warnet

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile_api  Dockerfile_build  Dockerfile_release  Dockerfile_rpc  LICENSE  MANIFEST.in  Makefile  README.md  api-compose.yml  connect.py  connect_nodes.py  docker-bake.hcl  docker-compose-old.yml  generate_docker_compose.py  justfile  package.json  pre-commit  prometheus.yml  pyproject.toml  quick_start.sh  requirements.in  requirements.txt  rpc_utils.py  ruff.toml  setup.py  start_api.sh
.github/actions/: action.yml
.github/scripts/: check_version.py
.github/workflows/: apidocs.yml  build-rpc-images.yml  build.yaml  ci.yml  deploy-app.yml  deploy.yml  flatpak.yaml  imagebuild.yml  publish-dist.yml  ruff.yml  test-images.yml  test.yml
api/: .env.sample  README.md  main.py  requirements.txt
api/auth/: api_token.py
api/db/: crud.py  database.py  models.py  schemas.py
api/validation/: email.py
client-api/: .env.sample  README.md  main.py
client-api/auth/: api_token.py
client-api/db/: crud.py  database.py  schemas.py
client-api/validation/: email.py
config/: bitcoin.conf  bitcoin.conf.0  bitcoin.conf.1  bitcoin.conf.2  bitcoin.conf.3
contrib/: README.md
contrib/nix/: flake.nix
docs/: admin.md  api-server.md  circuit-breaker.md  config.md  connecting-local-nodes.md  connection-from-host.md  creating-a-network.md  data.md  developer-notes.md  graph.md  install.md  lightning.md  ln-options.md  logging.md  logging_monitoring.md  monitoring.md  persistence.md  plugins.md  quickrun.md  quickstart.md  release-process.md  running.md  running_a_warnet_scenario.md  scaling.md  scenarios.md  snapshots.md  tank-options.md  warcli.md  warnet.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: config.ts  flowTypes.ts  types.ts
graphs/: basic3.graphml  random_internet_as_graph_n100_pos.graphml
images/bitcoin/: Dockerfile
manifests/: grafana_values.yaml  namespace.yaml
namespaces/two_namespaces_two_users/: namespaces.yaml
networks/6_node_bitcoin/: defaults.yaml  network.yaml
networks/ln_test/: network.yaml  node-defaults.yaml
old/: server.py
resources/configs/: warcli.yaml
resources/flatpak/: build-warnet.sh  make_flatpak.sh  org.bitcoindevproject.Warnet.desktop  org.bitcoindevproject.Warnet.yaml  warnet-wrapper.sh
resources/graphs/: 64tanks_txrate.graphml  default.graphml
resources/manifests/: grafana_values.yaml  istio-global-rate-limit.yaml  namespace.yaml  warnet-rpc-statefulset-dev.yaml
resources/networks/: node-defaults.yaml
resources/plugins/: demo.py
resources/scenarios/: btcd_miner.py  commander.py  ln_init.py  miner_std.py  reconnaissance.py  replacement_cycling.py  sens_relay.py  signet_miner.py  test_buggy_failure.py  testscenario_connect_dag.py  testscenario_p2p_interface.py  tx_flood.py
resources/scripts/: apidocs.py  connect_logging.sh  deploy.sh  file-executor.sh  graphdocs.py  install_logging.sh  k8s-log-collector.sh  miner.sh  quick_start.sh  setup_minikube.sh  setup_user_contexts.sh  startd.sh  stop.sh  tx.sh
scenarios/: tx-flood.py
scripts/: apidocs.py  build-bitcoin-images-k8s.sh  build-bitcoin-images.sh  build-bitcoind.sh  build-docker-image.sh  build-k8s-rpc.sh  build_images.sh  graphdocs.py  install_logging.sh  lnd.sh
server-api/: .env.sample  main.py
src/: debug.rs  main.rs  network.rs  rpc_call.rs
src/backend/: kubernetes_backend.py
src/backends/: __init__.py  backend_interface.py  compose_backend.py  kubernetes_backend.py
src/cli/: copy.py  debug.py  graph.py  image.py  image_build.py  main.py  network.py  rpc.py  scenarios.py
src/dns/: __init__.py  dns-seed.zone
src/graphs/: default.graphml  random_internet_as_graph_n100_pos.graphml
src/interfaces/: __init__.py  docker_interface.py  interfaces.py  kubernetes_interface.py
src/logging_config/: config.json
src/rust-cli/: debug.rs  general.rs  graph.rs  image.rs  main.rs  network.rs  rpc_call.rs  scenarios.rs  util.rs
src/scenarios/: anticycle.py  connect_dag.py  double_tx_relay.py  double_tx_relay_init.py  get_service_ip.py  ln_init.py  miner-std.py  miner_std.py  onion_init.py  replacement_cycling.py  sens_relay.py  tx-flood.py  tx_flood.py  utils.py
src/schema/: __init__.py  graph_schema.json  node_schema.json
src/services/: __init__.py  base_service.py  cadvisor.py  dns_seed.py  fluentd.py  fork_observer.py  grafana.py  node_exporter.py  prometheus.py  rpc.py  tor.py  tor_da.py  tor_relay.py
src/templates/: Dockerfile  Dockerfile_bind9  Dockerfile_custom_build  Dockerfile_k8  Dockerfile_k8_alpine  Dockerfile_tor_da  Dockerfile_tor_relay  Dockerfile_unified_alpine  addrman.patch  addrman_observer_config.toml  bitcoin.conf  check_dns.sh  dns-seed.zone  docker-entrypoint.sh  docker_entrypoint.sh  entrypoint.sh  example.graphml  fluent.conf  invalid.zone  torrc  (+9 more)
templates/: example.graphml
test/: binary_test.py  bitcoin_rpc_args_test.py  build_branch_test.py  commander_test.py  conf_test.py  dag_connection_test.py  get_service_ip_test.py  graph_test.py  hooks_test.py  init_test.py  ln_basic_test.py  ln_graph_test.py  ln_mixed_test.py  ln_test.py  local_test_runner.py  logging_test.py  namespace_admin_test.py  onion_test.py  plugin_test.py  rpc_test.py  scenarios_test.py  services_test.py  signet_test.py  simln_multiplier_test.py  simln_test.py  test_base.py  test_bitcoin_rpc_args.py  test_graph.py  v25_net_test.py  wargames_test.py
test_framework/: util.py
(+477 files in other folders)
