[package]
name = "warnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
jsonrpsee = { version = "0.22.3", features = ["http-client", "client"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

[[bin]]
name = "warcli"
path = "src/rust-cli/main.rs"
