[package]
name = "warnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
jsonrpsee = { version = "0.22.3", features = ["http-client", "client"] }
petgraph-graphml = "3.0.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rust-ini = "0.21.0"
rustworkx-core = "0.14.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
xmltree = { version = "0.10.3", features = ["indexmap"] }

[[bin]]
name = "warcli"
path = "src/rust-cli/main.rs"
