[project]
name = "warnet"
version = "0.10.0"
description = "Monitor and analyze the emergent behaviours of bitcoin networks"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bitcoin", "warnet"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[project.scripts]
warnet = "warnet.server:run_server"
warcli = "warnet.cli.main:cli"

[project.urls]
Homepage = "https://warnet.dev"
GitHub = "https://github.com/bitcoindevproject/warnet"

[project.optional-dependencies]
build = [
  "twine",
  "build",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "resources"]
