[project]
name = "warnet"
version = "1.1.8"
description = "Monitor and analyze the emergent behaviours of bitcoin networks"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["bitcoin", "warnet"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click==8.1.7",
    "docker==7.1.0",
    "flask==3.0.3",
    "inquirer==3.4.0",
    "kubernetes==30.1.0",
    "rich==13.7.1",
    "tabulate==0.9.0",
    "PyYAML==6.0.2",
    "pexpect==4.9.0",
]

[project.scripts]
warnet = "warnet.main:cli"
warcli = "warnet.main:cli"

[project.urls]
Homepage = "https://warnet.dev"
GitHub = "https://github.com/bitcoindevproject/warnet"
Pypi = "https://pypi.org/project/warnet/"

[project.optional-dependencies]
build = [
  "twine",
  "build",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", ".", "resources/scenarios"]
include = ["warnet*", "test_framework*", "resources*"]

[tool.setuptools.package-data]
"resources" = ["**/*"]
